cargo-features = ["edition2021"]
[package]
name = "benchmark"
version = "0.1.0"
authors = ["xiejian <jianxie0@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
joader={ path = "../server" }
log = "0.4"
log4rs = "0.10.0"
tokio = { version = "1", features = ["full"] }
tonic = "0.5"
coz = "0.1"
libc = "0.2"
ctrlc = "3.2.1"
