[package]
name = "rust"
version = "0.1.0"
authors = ["anonymous <jianxie0@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
grpcio = "0.9"
protobuf = "2"

[build-dependencies]
protoc-grpcio = "3"

[lib]
name = "protos"
path = "src/protos/mod.rs"