[package]
name = "joader"
version = "0.1.0"
authors = ["xiejian <jianxie0@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
log4rs = "0.10.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8.4"
crossbeam = "0.8.1"
libc = "0.2"
bytes = "1"
prost = "0.8"
prost-types = "0.8"
protobuf = "2"
tonic = "0.5"
clap = "3.0.0-beta.3"

[build-dependencies]
tonic-build = "0.5"

[lib]
name = "joader"